--- a/stack_evalutator/stack_evalutator.vcxproj.filters
+++ b/stack_evalutator/stack_evalutator.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="node.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stack.h">
+    <ClInclude Include="evaluator.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="evaluator.h">
+    <ClInclude Include="node.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="stack.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
